--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
 
     <string name="insets_title_basic">Insets: Basic</string>
     <string name="insets_title_list">Insets: Edge-to-edge list</string>
+    <string name="insets_title_imeanim">Insets: IME Animations</string>
 </resources>
